Implementing adding user to chat functionality